[gd_scene load_steps=9 format=2]

[ext_resource path="res://nodes/entity/Players/X/Weapons/X_weapon_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/entity/Player/X-weapons/X_weapon_sniper_missle.gd" type="Script" id=2]
[ext_resource path="res://sprites/UI/HUD/misc/spr_ui_lock_on.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 38, 38 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 38, 0, 38, 38 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 76, 0, 38, 38 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 200, 200 )

[node name="X_weapon_sniper_missle" instance=ExtResource( 1 )]
script = ExtResource( 2 )
normal_shot_cost = 1
max_on_screen = 1
Ammo_capacity = 71
color_palette_coordinate = Vector2( 0.117, 0.694 )
fire_color_palette_coordinate = Vector2( 0.117, 0.694 )
Weapon_Color = Color( 0.396078, 0.678431, 0.752941, 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="4"]
modulate = Color( 1, 1, 1, 0 )
z_index = 10
frames = SubResource( 2 )
playing = true

[node name="Area2D" type="Area2D" parent="." index="5"]
collision_layer = 0
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 6 )

[node name="Reticle_Holder" type="Node" parent="." index="6"]

[connection signal="fire_shot" from="." to="." method="_on_X_weapon_sniper_missle_fire_shot"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
